# bevyplay

./: .gitignore  Cargo.toml  makefile  publish.sh  win.sh
.cargo/: config.toml
.github/workflows/: rust.yml
assets/: pong.html
src/: application.rs  asset_loader.rs  asteroid.rs  camera.rs  collision_detection.rs  debug.rs  despawn.rs  end_game.rs  main.rs  movement.rs  pausemenu.rs  schedule.rs  score.rs  spaceship.rs  ui.rs
src/spaceship/: health.rs  shield.rs
