[package]
name = "pong"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

[features]
default = []
diagnostics = []

[dependencies]
rand = "*"
bevy = { version = "0.13" }
bevy-inspector-egui = "*"
bevy_asset_loader = "*"
