[package]
name = "pong"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

[features]
default = []
diagnostics = []

[dependencies]
rand = "0.8.5"
bevy = { version = "=0.13.1", features = [] }
bevy_pbr = { version = "=0.13.1", features = [] }
bevy-inspector-egui = "0.24.0"
bevy_asset_loader = "0.20.0"
bevy_health_bar3d = { git = "https://github.com/khanage/bevy_health_bar3d", branch = "main" }
